# wombat-garden

./: .gitignore  LICENSE  Makefile  README.md  package.yaml  wombat-garden.cabal
app/: Actions.hs  Opts.hs  Types.hs
specs/WombatGarden/: TypesSpec.hs
src/WombatGarden/: Types.hs
src/WombatGarden/Actions/: Grow.hs  Init.hs  Report.hs
src/WombatGarden/GP/: Generate.hs  JavaScript.hs
